--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     </div>
 
   </div>
-    <h2>@pantharshit007</h2>
+    <h2>
+      <a href="https://github.com/pantharshit007">@pantharshit007</a>
+    </h2>
 
   <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
   <script src="game.js"></script>
